--- a/app/templates/contents/members-area/posts/list.html.twig
+++ b/app/templates/contents/members-area/posts/list.html.twig
@@ -25,17 +25,37 @@
         <table class="table table-striped table-condensed">
             <thead>
                 <tr>
+                    <th width="100"></th>
                     <th>{{ paginator_sortable(pagination, 'Title', 'p.title') }}</th>
                     <th>{{ 'Image' | trans }}</th>
                     <th>{{ 'Metas' | trans }}</th>
                     <th>{{ paginator_sortable(pagination, 'User', 'u.username') }}</th>
                     <th width="160">{{ paginator_sortable(pagination, 'Time Created', 'p.timeCreated') }}</th>
-                    <th width="100">{{ 'Actions'|trans }}</th>
                 </tr>
             </thead>
             <tbody>
                 {% for post in pagination.getItems() %}
                     <tr>
+                        <td>
+                            <div class="object-checkbox-wrapper">
+                                <input class="object-checkbox"
+                                    type="checkbox"
+                                    name="ids[]"
+                                    value="{{ post.getId() }}" />
+                            </div>
+                            <a class="btn btn-xs btn-default"
+                                data-toggle="tooltip"
+                                title="{{ 'Edit' | trans }}"
+                                href="{{ url('members-area.posts.edit', { id: post.getId() }) }}">
+                                <i class="fa fa-fw fa-cog"></i>
+                            </a>
+                            <a class="btn btn-xs btn-danger"
+                                data-toggle="tooltip"
+                                title="{{ 'Remove' | trans }}"
+                                href="{{ url('members-area.posts.remove', { id: post.getId() }) }}">
+                                <i class="fa fa-fw fa-times"></i>
+                            </a>
+                        </td>
                         <td>{{ post.getTitle() }}</td>
                         <th>
                             {% if post.getImageUrl() %}
@@ -55,20 +75,6 @@
                         </td>
                         <td>{{ post.getUser()}}</td>
                         <td>{{ post.getTimeCreated()|date(app.dateTimeFormat) }}</td>
-                        <td>
-                            <a class="btn btn-xs btn-default"
-                                data-toggle="tooltip"
-                                title="{{ 'Edit' | trans }}"
-                                href="{{ url('members-area.posts.edit', { id: post.getId() }) }}">
-                                <i class="fa fa-fw fa-cog"></i>
-                            </a>
-                            <a class="btn btn-xs btn-danger"
-                                data-toggle="tooltip"
-                                title="{{ 'Remove' | trans }}"
-                                href="{{ url('members-area.posts.remove', { id: post.getId() }) }}">
-                                <i class="fa fa-fw fa-times"></i>
-                            </a>
-                        </td>
                     </tr>
                 {% else %}
                     <tr>
@@ -80,5 +86,21 @@
             </tbody>
         </table>
     </div>
+    <p>
+        <label>
+            <input id="check-all-checkbox"
+                type="checkbox" />
+            {{ 'Check All' | trans }}
+        </label>
+        -
+        {{ 'With Selected' | trans }}:
+        <a id="remove-selected-button"
+            class="btn btn-xs btn-danger"
+            data-toggle="tooltip"
+            title="{{ 'Remove' | trans }}"
+            href="{{ url('members-area.posts.remove', { id: 0 }) }}">
+            <i class="fa fa-fw fa-times"></i>
+        </a>
+    </p>
     {{ paginator_bottom_render(pagination) }}
 {% endblock %}
