--- a/app/templates/contents/members-area/roles/list.html.twig
+++ b/app/templates/contents/members-area/roles/list.html.twig
@@ -25,23 +25,24 @@
         <table class="table table-striped table-condensed">
             <thead>
                 <tr>
+                    <th width="100"></th>
                     <th>{{ paginator_sortable(pagination, 'Name', 'r.name') }}</th>
                     <th>{{ paginator_sortable(pagination, 'Description', 'r.description') }}</th>
                     <th>{{ paginator_sortable(pagination, 'Role', 'r.role') }}</th>
                     <th>{{ paginator_sortable(pagination, 'Priority', 'r.priority') }}</th>
                     <th>{{ paginator_sortable(pagination, 'Time Created', 'r.timeCreated') }}</th>
-                    <th width="100">{{ 'Actions'|trans }}</th>
                 </tr>
             </thead>
             <tbody>
                 {% for role in pagination.getItems() %}
                     <tr>
-                        <td>{{ role.getName()|trans }}</td>
-                        <td>{{ role.getDescription()|trans }}</td>
-                        <td>{{ role.getRole() }}</td>
-                        <td>{{ role.getPriority() }}</td>
-                        <td>{{ role.getTimeCreated() | date(app.dateTimeFormat) }}</td>
                         <td>
+                            <div class="object-checkbox-wrapper">
+                                <input class="object-checkbox"
+                                    type="checkbox"
+                                    name="ids[]"
+                                    value="{{ role.getId() }}" />
+                            </div>
                             <a class="btn btn-xs btn-default"
                                 data-toggle="tooltip"
                                 title="{{ 'Edit' | trans }}"
@@ -55,6 +56,11 @@
                                 <i class="fa fa-fw fa-times"></i>
                             </a>
                         </td>
+                        <td>{{ role.getName() | trans }}</td>
+                        <td>{{ role.getDescription() | trans }}</td>
+                        <td>{{ role.getRole() }}</td>
+                        <td>{{ role.getPriority() }}</td>
+                        <td>{{ role.getTimeCreated() | date(app.dateTimeFormat) }}</td>
                     </tr>
                 {% else %}
                     <tr>
@@ -66,5 +72,21 @@
             </tbody>
         </table>
     </div>
+    <p>
+        <label>
+            <input id="check-all-checkbox"
+                type="checkbox" />
+            {{ 'Check All' | trans }}
+        </label>
+        -
+        {{ 'With Selected' | trans }}:
+        <a id="remove-selected-button"
+            class="btn btn-xs btn-danger"
+            data-toggle="tooltip"
+            title="{{ 'Remove' | trans }}"
+            href="{{ url('members-area.roles.remove', { id: 0 }) }}">
+            <i class="fa fa-fw fa-times"></i>
+        </a>
+    </p>
     {{ paginator_bottom_render(pagination) }}
 {% endblock %}
