--- a/app/templates/contents/members-area/my/password.html.twig
+++ b/app/templates/contents/members-area/my/password.html.twig
@@ -2,11 +2,10 @@
 
 {% set user = user | default(app.user) %}
 
-{% block title %}{{ 'Settings' | trans }} | {{ 'Profile' | trans }} | {{ parent() }}{% endblock %}
+{% block title %}{{ 'Password' | trans }} | {{ 'My' | trans }} | {{ parent() }}{% endblock %}
 
 {% block main %}
-    <h1>{{ 'Profile' | trans }}</h1>
-    <h2>{{ 'Settings' | trans }}</h2>
+    <h1>{{ 'Password' | trans }}</h1>
     <ol class="breadcrumb">
         <li>
             <a href="{{ url('members-area') }}">
@@ -18,14 +17,9 @@
                 {{ 'My' | trans }}
             </a>
         </li>
-        <li>
-            <a href="{{ url('members-area.my.profile') }}">
-                {{ 'Profile' | trans }}
-            </a>
-        </li>
         <li class="active">
-            {{ 'Settings' | trans }}
+            {{ 'Password' | trans }}
         </li>
     </ol>
-    {% include 'contents/members-area/my/profile/settings/_form.html.twig' %}
+    {{ form(form) }}
 {% endblock %}
