--- a/app/templates/layouts/content/default/_parts/header.html.twig
+++ b/app/templates/layouts/content/default/_parts/header.html.twig
@@ -91,7 +91,7 @@
                                 </li>
                                 <li class="{{ path('members-area.my.password') == app.currentUri ? 'active' : '' }}">
                                     <a href="{{ url('members-area.my.password') }}">
-                                        {{ 'Change password' | trans }}
+                                        {{ 'Password' | trans }}
                                     </a>
                                 </li>
                                 <li class="divider"></li>
