Boostrap select stuff

--- a/app/templates/layouts/content/default.html.twig
+++ b/app/templates/layouts/content/default.html.twig
@@ -15,6 +15,7 @@
                 <link id="animate.css-css" rel="stylesheet" href="{{ app.baseUri }}/assets/vendor/animate.css/animate.min.css" />
                 <link id="font-awesome-css" rel="stylesheet" href="{{ app.baseUri }}/assets/vendor/fontawesome/css/font-awesome.min.css" />
                 <link id="bootstrap-css" rel="stylesheet" href="{{ app.baseUri }}/assets/vendor/bootstrap/dist/css/bootstrap.min.css" />
+                <link id="bootstrap-select-css" rel="stylesheet" href="{{ app.baseUri }}/assets/vendor/bootstrap-select/dist/css/bootstrap-select.min.css" />
                 <link id="helpers-css" rel="stylesheet" href="{{ app.baseUri }}/assets/stylesheets/helpers.css" />
                 <link id="application-css" rel="stylesheet" href="{{ app.baseUri }}/assets/stylesheets/application.css?version={{ app.version }}" />
             {% endblock %}
@@ -92,8 +93,9 @@
                     jQuery.noConflict();
                 </script>
                 <script id="bootstrap-js" type="text/javascript" src="{{ app.baseUri }}/assets/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
+                <script id="bootstrap-select-js" type="text/javascript" src="{{ app.baseUri }}/assets/vendor/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
                 <script id="moment-js" type="text/javascript" src="{{ app.baseUri }}/assets/vendor/moment/min/moment-with-locales.min.js"></script>
-                 <script id="uri-js" type="text/javascript" src="{{ app.baseUri }}/assets/vendor/uri.js/src/URI.min.js"></script>
+                <script id="uri-js" type="text/javascript" src="{{ app.baseUri }}/assets/vendor/uri.js/src/URI.min.js"></script>
                 <script id="helpers-js" type="text/javascript" src="{{ app.baseUri }}/assets/javascripts/helpers.js"></script>
                 <script id="application-js" type="text/javascript" src="{{ app.baseUri }}/assets/javascripts/application.js?version={{ app.version }}"></script>
                 <script id="application-initialize-js">
