--- a/app/templates/contents/members-area/errors/list.html.twig
+++ b/app/templates/contents/members-area/errors/list.html.twig
@@ -21,7 +21,7 @@
                 <tr>
                     <th>{{ paginator_sortable(pagination, 'Code', 'e.code') }}</th>
                     <th>{{ paginator_sortable(pagination, 'Message', 'e.message') }}</th>
-                    <th width="160">{{ paginator_sortable(pagination, 'Time Created', 'p.timeCreated') }}</th>
+                    <th width="160">{{ paginator_sortable(pagination, 'Time Created', 'e.timeCreated') }}</th>
                 </tr>
             </thead>
             <tbody>
