camelCase config to snake_case config

--- a/app/templates/contents/members-area/errors/list.html.twig
+++ b/app/templates/contents/members-area/errors/list.html.twig
@@ -29,7 +29,7 @@
                     <tr>
                         <td>{{ error.getCode() }}</td>
                         <td>{{ error.getMessage() }}</td>
-                        <td>{{ error.getTimeCreated() | date(app.dateTimeFormat) }}</td>
+                        <td>{{ error.getTimeCreated() | date(app.date_time_format) }}</td>
                     </tr>
                 {% else %}
                     <tr>
