--- a/app/templates/layouts/content/default/_parts/header.html.twig
+++ b/app/templates/layouts/content/default/_parts/header.html.twig
@@ -49,7 +49,7 @@
                                 {% for localeKey, locale in app.locales %}
                                     <li class="{{ app.locale == localeKey ? 'active' : '' }}">
                                         <a href="{{ url('set-locale', { locale : localeKey }) }}">
-                                            {{ locale.languageName | trans }}
+                                            {{ locale.language_name | trans }}
                                         </a>
                                     </li>
                                 {% endfor %}
