--- a/app/templates/contents/members-area/users/detail.html.twig
+++ b/app/templates/contents/members-area/users/detail.html.twig
@@ -48,7 +48,7 @@
                         {% endif %}
                         {% if user.getProfile().getBirthdate() %}
                             <dt>{{ 'Birthdate' | trans }}</dt>
-                            <dd>{{ user.getProfile().getBirthdate() | date(app.dateFormat) }}</dd>
+                            <dd>{{ user.getProfile().getBirthdate() | date(app.date_format) }}</dd>
                         {% endif %}
                     </dl>
                 </div> <!-- /.col-md-6 -->
