--- a/app/templates/layouts/content/default.html.twig
+++ b/app/templates/layouts/content/default.html.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html id="html" class="no-js" lang="{{ app.languageCode }}">
+<html id="html" class="no-js" lang="{{ app.language_code }}">
     <head>
         <meta charset="utf-8" />
         <title>{% block title %}{{ app.name|trans }}{% endblock %}</title>
