--- a/app/templates/contents/members-area/settings/index.html.twig
+++ b/app/templates/contents/members-area/settings/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'layouts/content/members-area.html.twig' %}
+{% extends 'layouts/members-area.html.twig' %}
 
 {% block title %}{{ 'Settings' | trans }} | {{ parent() }}{% endblock %}
 
