--- a/app/templates/layouts/members-area/login.html.twig
+++ b/app/templates/layouts/members-area/login.html.twig
@@ -1,6 +1,6 @@
-{% extends 'layouts/content/default.html.twig' %}
+{% extends 'layouts/default.html.twig' %}
 
-{% block title %}{{ 'Members area'|trans }} | {{ parent() }}{% endblock %}
+{% block title %}{{ 'Members area' | trans }} | {{ parent() }}{% endblock %}
 
 {% block content %}
     <div class="container-fluid">
@@ -8,7 +8,7 @@
             <div class="col-md-4 col-md-offset-4">
                 {% block main %}{% endblock %}
                 <hr />
-                {% include 'layouts/content/members-area/_parts/footer-links.html.twig' %}
+                {% include 'layouts/members-area/_parts/footer-links.html.twig' %}
             </div>
         </div>
     </div> <!-- /.container-fluid -->
