--- a/app/templates/contents/members-area/posts/new.html.twig
+++ b/app/templates/contents/members-area/posts/new.html.twig
@@ -1,4 +1,4 @@
-{% extends 'layouts/content/members-area.html.twig' %}
+{% extends 'layouts/members-area.html.twig' %}
 
 {% block title %}{{ 'New' | trans }} | {{ 'Posts' | trans }} | {{ parent() }}{% endblock %}
 
