--- a/app/templates/contents/members-area/users/detail.html.twig
+++ b/app/templates/contents/members-area/users/detail.html.twig
@@ -1,4 +1,4 @@
-{% extends 'layouts/content/members-area.html.twig' %}
+{% extends 'layouts/members-area.html.twig' %}
 
 {% block title %}{{ user.getProfile().getName() }} | {{ 'Users' | trans }} | {{ parent() }}{% endblock %}
 
