--- a/web/assets/stylesheets/application.css
+++ b/web/assets/stylesheets/application.css
@@ -30,55 +30,6 @@ h4,
 h5,
 h6 {}
 
-/********** Warnings **********/
-#warnings {
-	position: fixed;
-	top: 0;
-	right: 0;
-	max-width: 360px;
-	display: none;
-}
-
-	#warnings .warning {
-		padding: 8px;
-		margin-bottom: 8px;
-		z-index: 9999;
-		background-color: #FCD116;
-		color: #6B5702;
-		text-align: justify;
-		display: none;
-	}
-
-	#warnings .warning.active {
-		display: block;
-	}
-
-	/***** Noscript *****/
-	#noscript-warning {}
-
-	/***** Old IE Warning *****/
-	#old-ie-warning {}
-
-/********** Preloader **********/
-#preloader {
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	z-index: 99999999;
-	font-size: 32px;
-	text-align: center;
-	background-color: #fff;
-	background-position: center 100px;
-	background-repeat: no-repeat;
-	background-size: 256px 256px;
-	/* background-image: url('../images/logo/icon.png'); */
-	padding-top: 20px;
-	color: #000;
-    display: none;
-}
-
 /********** Wrapper **********/
 #wrapper {}
 
@@ -137,12 +88,9 @@ h6 {}
 	.divider-top {
 		border-top: 3px solid #666;
 	}
-    
-    .max-width-80 {
-        max-width: 80px;
-    }
 
 /********** Fixes **********/
+/* Navbar */
 .navbar-brand {
 		line-height: 26px;
 		font-size: 22px;
@@ -160,7 +108,8 @@ h6 {}
 	.navbar-brand > div {
 		padding: 3px 0;
 	}
-    
+
+/* Object checkbox */
 .object-checkbox-wrapper {
     display: inline-block; 
     margin-right: 5px;
