--- a/app/templates/contents/members-area/posts/edit.html.twig
+++ b/app/templates/contents/members-area/posts/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'layouts/members-area.html.twig' %}
 
-{% block title %}{{ 'Edit' | trans }} | {{ 'Posts' | trans }} | {{ parent() }}{% endblock %}
+{% block title %}{{ 'Edit' | trans }} | {{ post }} | {{ 'Posts' | trans }} | {{ parent() }}{% endblock %}
 
 {% block main %}
     <h1>
