--- a/app/templates/contents/index.html.twig
+++ b/app/templates/contents/index.html.twig
@@ -5,6 +5,6 @@
 {% block main %}
     <h1>{{ 'Home' | trans }}</h1>
     <div id="main-content">
-        {{ 'home.contentText' | trans | raw }}
+        {{ 'Hello and welcome to the project!' | trans }}
     </div>
 {% endblock %}
