--- a/app/templates/contents/members-area/dashboard.html.twig
+++ b/app/templates/contents/members-area/dashboard.html.twig
@@ -15,6 +15,6 @@
         </li>
     </ol>
     <div id="main-content">
-        {{ 'members-area.dashboard.contentText' | trans }}
+        {{ 'Hello and welcome to the dashboard!' | trans }}
     </div>
 {% endblock %}
